Set up CI with Azure Pipelines
[skip ci]

--- a/docs/demo/nodejs/.azure/ci-azure-pipelines.yml
+++ b/docs/demo/nodejs/.azure/ci-azure-pipelines.yml
@@ -42,10 +42,10 @@ stages:
         enabled: true,
         azureSubscription: 'azure-service-connection', 
         azureContainerRegistry: 'artifacts-repo',
-        azureContainerRegistryName: 'orgsharedregistry',
+        azureContainerRegistryName: 'test48',
         environmentNamespace: 'Automation.automation', 
         namespace: 'automation',
-        upgradeParameters: '--set repository=orgsharedregistry.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user', 
+        upgradeParameters: '--set repository=test48.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user', 
         gate: true     
       }
       FUNCTIONAL: {
@@ -55,7 +55,7 @@ stages:
         azureContainerRegistryName: 'orgsharedregistry',
         environmentNamespace: 'Functional.functional', 
         namespace: 'functional',
-        upgradeParameters: '--set repository=orgsharedregistry.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user',
+        upgradeParameters: '--set repository=test48.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user',
         testType: 'galing',
         gatlingScenario: '',
         gate: true,
@@ -64,9 +64,9 @@ stages:
         enabled: true,
         azureSubscription: 'azure-service-connection', 
         azureContainerRegistry: 'artifacts-repo',
-        azureContainerRegistryName: 'orgsharedregistry',
+        azureContainerRegistryName: 'test48',
         environmentNamespace: 'NonFunctional.nonfunctional', 
         namespace: 'nonfunctional',
-        upgradeParameters: '--set repository=orgsharedregistry.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user',
+        upgradeParameters: '--set repository=test48.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user',
         gate: true
       }
