--- a/docs/demo/nodejs/.azure/ci-azure-pipelines.yml
+++ b/docs/demo/nodejs/.azure/ci-azure-pipelines.yml
@@ -43,8 +43,8 @@ stages:
         azureSubscription: 'azure-service-connection', 
         azureContainerRegistry: 'artifacts-repo',
         azureContainerRegistryName: 'test48',
-        environmentNamespace: 'Automation.automation', 
-        namespace: 'automation',
+        environmentNamespace: 'Automation.default', 
+        namespace: 'default',
         upgradeParameters: '--set repository=test48.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user', 
         gate: true     
       }
