Update ci-azure-pipelines.yml for Azure Pipelines

--- a/docs/demo/nodejs/.azure/ci-azure-pipelines.yml
+++ b/docs/demo/nodejs/.azure/ci-azure-pipelines.yml
@@ -34,7 +34,7 @@ stages:
         enabled: true,
         azureContainerRegistry: 'artifacts-repo', 
         azureSubscription: 'azure-service-connection',
-        azureContainerRegistryName: 'orgsharedregistry',
+        azureContainerRegistryName: 'test48',
         scan: true,
         gate: true,
       }
@@ -52,7 +52,7 @@ stages:
         enabled: true,
         azureSubscription: 'azure-service-connection', 
         azureContainerRegistry: 'artifacts-repo',
-        azureContainerRegistryName: 'orgsharedregistry',
+        azureContainerRegistryName: 'test48',
         environmentNamespace: 'Functional.functional', 
         namespace: 'functional',
         upgradeParameters: '--set repository=test48.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user',
