--- a/docs/demo/nodejs/charts/mydrive-user/templates/secrets.yaml
+++ b/docs/demo/nodejs/charts/mydrive-user/templates/secrets.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "mywebapi.fullname" $root }}-{{ $name | lower }}
+  name: {{ template "mydrive-user.fullname" $root }}-{{ $name | lower }}
 data:
   {{- range $key, $value := $values }}
   {{ $key }}: {{ $value | b64enc }}
