--- a/docs/demo/nodejs/charts/mydrive-user/templates/service.yaml
+++ b/docs/demo/nodejs/charts/mydrive-user/templates/service.yaml
@@ -1,13 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}-svc
+  name: {{ template "mydrive-user.fullname" . }}
+  labels:
+    app: {{ template "mydrive-user.name" . }}
+    chart: {{ template "mydrive-user.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
+  type: {{ .Values.service.type }}
   ports:
-  - port: 80
-    targetPort: 3000
-    protocol: TCP
-    name: http
+    - port: {{ .Values.service.port }}
+      targetPort: http
+      protocol: TCP
+      name: http
   selector:
-    app: {{ .Values.name }}
-    run: {{ .Values.name }}
+    app: {{ template "mydrive-user.name" . }}
+    release: {{ .Release.Name }}
