--- a/docs/demo/nodejs/charts/mydrive-user/templates/ingress.yaml
+++ b/docs/demo/nodejs/charts/mydrive-user/templates/ingress.yaml
@@ -1,16 +1,43 @@
+{{- if .Values.ingress.enabled -}}
+{{- $fullName := include "mydrive-user.fullname" . -}}
+{{- $servicePort := .Values.service.port -}}
+{{- $ingressPath := .Values.ingress.path -}}
+{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+apiVersion: networking.k8s.io/v1beta1
+{{- else -}}
 apiVersion: extensions/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
-  name: {{ .Values.name }}-ingress
+  name: {{ $fullName }}
+  labels:
+    app: {{ template "mydrive-user.name" . }}
+    chart: {{ template "mydrive-user.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+{{- with .Values.ingress.annotations }}
   annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+{{ toYaml . | indent 4 }}
+{{- end }}
 spec:
+{{- if .Values.ingress.tls }}
+  tls:
+  {{- range .Values.ingress.tls }}
+    - hosts:
+      {{- range .hosts }}
+        - {{ . }}
+      {{- end }}
+      secretName: {{ .secretName }}
+  {{- end }}
+{{- end }}
   rules:
-  - host: {{ .Values.host }}
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: {{ .Values.name }}-svc
-          servicePort: 80
+  {{- range .Values.ingress.hosts }}
+    - host: {{ . }}
+      http:
+        paths:
+          - path: {{ $ingressPath }}
+            backend:
+              serviceName: {{ $fullName }}
+              servicePort: http
+  {{- end }}
+{{- end }}
