--- a/docs/demo/nodejs/.azure/ci-azure-pipelines.yml
+++ b/docs/demo/nodejs/.azure/ci-azure-pipelines.yml
@@ -15,11 +15,11 @@ stages:
       linuxAgentPool: 'ubuntu-latest'
       windowsAgentPool: 'windows-latest'
       buildType: 'nodejs'
-      projectName: 'nodejs'
+      projectName: 'mydrive-user'
       initSteps: []
       docker: true
       helm: true
-      imageName: 'nodejs'
+      imageName: 'mydrive-user'
       helmCharts: charts
       codeRootDir: docs/demo/nodejs
       deployType: 'helm-native'
@@ -45,7 +45,7 @@ stages:
         azureContainerRegistryName: 'test48',
         environmentNamespace: 'Automation.automation', 
         namespace: 'automation',
-        upgradeParameters: '--set repository=test48.azurecr.io/nodejs --set tag=$(Build.BuildId) --set name=nodejs', 
+        upgradeParameters: '--set repository=test48.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user, 
         gate: true     
       }
       FUNCTIONAL: {
@@ -55,7 +55,7 @@ stages:
         azureContainerRegistryName: 'test48',
         environmentNamespace: 'Functional.functional', 
         namespace: 'functional',
-        upgradeParameters: '--set repository=test48.azurecr.io/nodejs --set tag=$(Build.BuildId) --set name=nodejs',
+        upgradeParameters: '--set repository=test48.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user',
         testType: 'galing',
         gatlingScenario: '',
         gate: true,
@@ -67,6 +67,6 @@ stages:
         azureContainerRegistryName: 'test48',
         environmentNamespace: 'NonFunctional.nonfunctional', 
         namespace: 'nonfunctional',
-        upgradeParameters: '--set repository=test48.azurecr.io/nodejs --set tag=$(Build.BuildId) --set name=nodejs',
+        upgradeParameters: '--set repository=test48.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user',
         gate: true
       }
