--- a/docs/demo/nodejs/.azure/ci-azure-pipelines.yml
+++ b/docs/demo/nodejs/.azure/ci-azure-pipelines.yml
@@ -45,7 +45,7 @@ stages:
         azureContainerRegistryName: 'test48',
         environmentNamespace: 'Automation.automation', 
         namespace: 'automation',
-        upgradeParameters: '--set repository=test48.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user, 
+        upgradeParameters: '--set repository=test48.azurecr.io/mydrive-user --set tag=$(Build.BuildId) --set name=mydrive-user', 
         gate: true     
       }
       FUNCTIONAL: {
